Remmove kibana_dashboard
Delete the following settings

generate_kibana_link
kibana_url
use_kibana_dashboard
use_kibana4_dashboard
kibana4_start_timedelta
kibana4_end_timedelta

--- a/chart/elastalert2/values.yaml
+++ b/chart/elastalert2/values.yaml
@@ -76,11 +76,9 @@ elasticsearch:
 optEnv: []
 
 extraConfigOptions: {}
-  # # Options to propagate to all rules, e.g. a common slack_webhook_url or kibana_url
+  # # Options to propagate to all rules, e.g. a common slack_webhook_url
   # # Please note at the time of implementing this value, it will not work for required_locals
   # # Which MUST be set at the rule level, these are: ['alert', 'type', 'name', 'index']
-  # generate_kibana_link: true
-  # kibana_url: https://kibana.yourdomain.com
   # slack_webhook_url: dummy
 
 # To load ElastAlert 2 config via secret, uncomment the line below
