--- a/examples/rules/ssh-repeat-offender.yaml
+++ b/examples/rules/ssh-repeat-offender.yaml
@@ -32,10 +32,9 @@ include:
   - match_body.user.name
   - match_body.source.ip
 
-alert_subject: "SSH abuse (repeat offender) on <{}> | <{}|Show Dashboard>"
+alert_subject: "SSH abuse (repeat offender) on <{}>"
 alert_subject_args:
   - match_body.host.hostname
-  - kibana_link
 
 alert_text: |-
   An reapeat offender has been active on {}.
