--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ jira>=2.0.0
 jsonschema>=3.0.2
 prison>=0.1.2
 prometheus_client>=0.10.1
+pyshorteners==1.0.1
 py-zabbix>=1.1.3
 python-dateutil>=2.6.0,<2.9.0
 PyYAML>=5.1
