--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,9 @@
-apscheduler>=3.8.1,<4.0
-aws-requests-auth>=0.4.3
-sortedcontainers>=2.4.0
-boto3>=1.20.53
-cffi>=1.15.0
-croniter>=1.2.0
-elasticsearch==7.10.1
-envparse>=0.2.0
-exotel>=0.1.5
-Jinja2==3.1.2
-jira>=3.1.1
-jsonschema>=4.4.0
-prison>=0.2.1
-prometheus_client>=0.13.1
-py-zabbix>=1.1.7
-python-dateutil>=2.8.2
-PyYAML>=6.0
-requests>=2.27.1
-stomp.py>=8.0.1
-texttable>=1.6.4
-statsd-tags==3.2.1.post1
-twilio==6.57.0
-tencentcloud-sdk-python>=3.0.577
-jsonpointer>=2.2
-tzlocal==2.1
-slack-sdk>=3.13
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+charset-normalizer==2.0.12
+frozenlist==1.3.0
+idna==3.3
+multidict==6.0.2
+yarl==1.7.2
