--- a/chart/elastalert2/templates/deployment.yaml
+++ b/chart/elastalert2/templates/deployment.yaml
@@ -47,6 +47,10 @@ spec:
 {{- if .Values.extraContainers }}
 {{ .Values.extraContainers | toYaml | indent 6}}
 {{- end }}
+      initContainers:
+{{- if .Values.extraInitContainers }}
+{{ .Values.extraInitContainers | toYaml | indent 6}}
+{{- end }}
 
       - name: elastalert
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
