--- a/chart/elastalert2/values.yaml
+++ b/chart/elastalert2/values.yaml
@@ -6,8 +6,10 @@ commonLabels: {}
 commonAnnotations: {}
 appKubernetesIoComponent: elastalert2
 
-# Folder where you store your rules must be in root of the chart
-# this will override the rules and secretRulesName values
+# Folder where Helm can find local rules prior to deployment to the k8s cluster. By default,
+# 'rules' folder must be located in the root of the chart directory. Note that this setting
+# will override the rules and secretRulesName values. Again, these rules are only read 
+# during the time of the chart deployment (installation) into the cluster.
 # rootRulesFolder: "rules"
 
 # number of replicas to run
