--- a/chart/elastalert2/values.yaml
+++ b/chart/elastalert2/values.yaml
@@ -10,8 +10,8 @@ appKubernetesIoComponent: elastalert2
 # 'rules' folder must be located in the root of the chart directory. Note that this setting
 # will override the rules and secretRulesName values. Again, these rules are only read 
 # during the time of the chart deployment (installation) into the cluster.
-# IMPORTANT: Rule files MUST use the 4-character .yaml extension.
 # rootRulesFolder: "rules"
+# enabledRules: ["deadman_slack", "deadman_pagerduty"]
 
 # number of replicas to run
 replicaCount: 1
