add minReadySeconds param to the helm chart deployment
Signed-off-by: Kurtser Alex <alexk@satoricyber.com>

--- a/chart/elastalert2/templates/deployment.yaml
+++ b/chart/elastalert2/templates/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       {{- include "common.labels.matchLabels" . | nindent 6 }}
   replicas: {{ .Values.replicaCount }}
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
+  minReadySeconds: {{ .Values.minReadySeconds }}
   template:
     metadata:
       annotations:
