--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2>=3.1.2
 jira>=3.4.1
 jsonpointer>=2.3
 jsonschema>=4.17.3
+prettytable>=3.8.0
 prison>=0.2.1
 prometheus_client>=0.15.0
 python-dateutil>=2.8.2
