--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -32,7 +32,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
         with:
-          buildx-version: latest
+          version: latest
 
       - name: Build and Push multi-arch to Docker Hub
         run: |
