--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,8 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-24.04
+  # Must stay at 22.04 until RTD adds support for 24.04
+  os: ubuntu-22.04
   tools:
     python: "3.12"
     
