--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
 apscheduler>=3.10.4,<4.0
 aws-requests-auth>=0.4.3
-boto3>=1.29.6
+boto3>=1.34.54
 cffi>=1.16.0
-croniter>=2.0.1
+croniter>=2.0.2
 elasticsearch==7.10.1
 envparse>=0.2.0
 exotel==0.1.5
-Jinja2>=3.1.2
+Jinja2>=3.1.3
 jira>=3.5.2
 jsonpointer>=2.4
-jsonschema>=4.20.0
-prettytable>=3.9.0
+jsonschema>=4.21.1
+prettytable>=3.10.0
 prison>=0.2.1
-prometheus_client>=0.19.0
-python-dateutil>=2.8.2
+prometheus_client>=0.20.0
+python-dateutil>=2.9.0.post0
 PyYAML>=6.0.1
 py-zabbix>=1.1.7
 requests>=2.31.0
 sortedcontainers>=2.4.0
 statsd-tags==3.2.1.post1
 stomp.py>=8.1.0
-tencentcloud-sdk-python>=3.0.1038
+tencentcloud-sdk-python>=3.0.1098
 texttable>=1.7.0
 twilio>=8.10.2
-tzlocal==2.1
