feat(quickwit): add quickwit integration
Signed-off-by: Idriss Neumann <idriss.neumann@comwork.io>

--- a/chart/elastalert2/templates/config.yaml
+++ b/chart/elastalert2/templates/config.yaml
@@ -30,6 +30,9 @@ data:
 {{- if .Values.elasticsearch.password }}
     es_password: {{ .Values.elasticsearch.password }}
 {{- end }}
+{{- if .Values.quickwit.enable }}
+    qw_enable: "True"
+{{- end }}
     writeback_index: {{ .Values.writebackIndex }}
     use_ssl: {{ .Values.elasticsearch.useSsl }}
     verify_certs: {{ .Values.elasticsearch.verifyCerts }}
