--- a/.github/workflows/close-threads.yml
+++ b/.github/workflows/close-threads.yml
@@ -15,6 +15,7 @@ concurrency:
 
 jobs:
   close-threads:
+    if: github.repository_owner == 'jertel'
     runs-on: ubuntu-latest
     permissions:
       issues: write
