--- a/.github/workflows/lock-threads.yml
+++ b/.github/workflows/lock-threads.yml
@@ -15,6 +15,7 @@ concurrency:
 
 jobs:
   lock-threads:
+    if: github.repository_owner == 'jertel'
     runs-on: ubuntu-latest
     steps:
       - uses: jertel/lock-threads@main
