--- a/.github/workflows/upload_chart.yml
+++ b/.github/workflows/upload_chart.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   publish:
+    if: github.repository_owner == 'jertel'
+    
     environment: Main
     runs-on: ubuntu-latest
     steps:
