--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -2,20 +2,30 @@ name: publish_image
 
 on:
   push:
-    # Publish `bugfix/opsgenie-alerter-handle-keyerror-in-custom-message` as Docker image.
+    # Publish `master` as Docker `latest` image.
     branches:
-      - bugfix/opsgenie-alerter-handle-keyerror-in-custom-message
+      - master
+
+    tags:
+      - 2.*
 
 env:
   IMAGE_NAME: elastalert2
-  DOCKER_REPO: facilityworld/elastalert2
+  DOCKER_REPO: jertel/elastalert2
 
 jobs:
   push:
+    if: github.repository_owner == 'jertel'
+    
+    environment: Main
+    
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Log into GitHub Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
       - name: Log into Docker Registry
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
@@ -31,27 +41,48 @@ jobs:
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
 
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "master" ] && VERSION=latest
+
+          TAG2=""
+          if [[ "$VERSION" == "2."* ]]; then
+            TAG2="--tag $DOCKER_REPO:2"
+          fi
+
           echo VERSION=$VERSION
+          echo TAG2=$TAG2
 
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           docker buildx build \
           --platform=linux/amd64,linux/arm64 \
           --output "type=image,push=true" \
           --file ./Dockerfile . \
-          --tag $DOCKER_REPO:$VERSION
+          --tag $DOCKER_REPO:$VERSION $TAG2
 
-      # - name: Build and push image to GitHub
-      #   run: |
-      #     docker build . --file Dockerfile --tag $IMAGE_NAME
+      - name: Build and push image to GitHub
+        run: |
+          docker build . --file Dockerfile --tag $IMAGE_NAME
 
-      #     IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
+          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
 
-      #     # Change all uppercase to lowercase
-      #     IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
-      #     echo IMAGE_ID=$IMAGE_ID
-      #     echo VERSION=$VERSION
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
 
-      #     # Push to GitHub Package
-      #     docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-      #     docker push $IMAGE_ID:$VERSION
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "master" ] && VERSION=latest
+
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+
+          # Push to GitHub Package
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
+
+          if [[ "$VERSION" == "2."* ]]; then
+            # Push to GitHub Package
+            docker tag $IMAGE_NAME $IMAGE_ID:2
+            docker push $IMAGE_ID:2
+          fi
