--- a/chart/elastalert2/templates/deployment.yaml
+++ b/chart/elastalert2/templates/deployment.yaml
@@ -18,6 +18,11 @@ spec:
     matchLabels:
       {{- include "common.labels.matchLabels" . | nindent 6 }}
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    type: {{ .Values.updateStrategy.type | default "RollingUpdate" }}
+    rollingUpdate:
+      maxUnavailable: {{ .Values.updateStrategy.rollingUpdate.maxUnavailable | default "25%" }}
+      maxSurge: {{ .Values.updateStrategy.rollingUpdate.maxSurge | default "25%" }}
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   minReadySeconds: {{ .Values.minReadySeconds }}
   template:
