--- a/chart/elastalert2/values.yaml
+++ b/chart/elastalert2/values.yaml
@@ -16,6 +16,13 @@ appKubernetesIoComponent: elastalert2
 # number of replicas to run
 replicaCount: 1
 
+# update strategy to use (default : RollingUpdate) but can be Recreate
+updateStrategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxUnavailable: 25%
+    maxSurge: 25%
+
 # number of helm release revisions to retain
 revisionHistoryLimit: 5
 
