--- a/chart/elastalert2/templates/deployment.yaml
+++ b/chart/elastalert2/templates/deployment.yaml
@@ -18,11 +18,9 @@ spec:
     matchLabels:
       {{- include "common.labels.matchLabels" . | nindent 6 }}
   replicas: {{ .Values.replicaCount }}
-  strategy:
-    type: {{ .Values.updateStrategy.type | default "RollingUpdate" }}
-    rollingUpdate:
-      maxUnavailable: {{ .Values.updateStrategy.rollingUpdate.maxUnavailable | default "25%" }}
-      maxSurge: {{ .Values.updateStrategy.rollingUpdate.maxSurge | default "25%" }}
+  {{- if .Values.updateStrategy }}
+  strategy: {{- toYaml .Values.updateStrategy | nindent 4 }}
+  {{- end }}
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   minReadySeconds: {{ .Values.minReadySeconds }}
   template:
