--- a/chart/elastalert2/templates/deployment.yaml
+++ b/chart/elastalert2/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "elastalert.fullname" . }}
+  namespace: {{ include "common.names.namespace" . | quote }}
   labels:
     {{- if .Values.commonLabels }}
     {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
