--- a/chart/elastalert2/templates/service.yaml
+++ b/chart/elastalert2/templates/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "common.names.servicename" . | quote  }}
+  namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" . | nindent 4 }}
     app.kubernetes.io/component: {{ .Values.appKubernetesIoComponent}}
     {{- if .Values.commonLabels }}
