--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -3,3 +3,5 @@ markers =
     elasticsearch: mark a test as using elasticsearch.
 filterwarnings =
     ignore::pytest.PytestUnhandledThreadExceptionWarning
+    ignore:cannot collect 'test.*' because it is not a function
+    ignore:cannot collect 'test_.*' because it is not a function
