Migrating from py-zabbix to python-zabbix-utils

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ prison>=0.2.1
 prometheus-client>=0.23.1
 python-dateutil>=2.9.0.post0
 PyYAML>=6.0.3
-py-zabbix>=1.1.7
+zabbix-utils>=2.0.3
 requests>=2.32.5
 sortedcontainers>=2.4.0
 statsd-tags==3.2.1.post1
